Web Flow With External Server Posting Back/force-app/main/objects/WebFlowClient__mdt/WebFlowClient__mdt.object-meta.xml
<CustomObject>
    <label>Web Flow Client</label>
    <pluralLabel>Web Flow Clients</pluralLabel>
</CustomObject>