Web Flow With External Server Posting Back/force-app/main/objects/WebFlowClient__mdt/fields/Callback__c.field-meta.xml
<CustomField>
    <fullName>Callback__c</fullName>
    <label>Callback</label>
    <required>true</required>
    <type>Url</type>
</CustomField>