Web Flow With External Server Posting Back/force-app/main/objects/WebFlowClient__mdt/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <label>Client Id</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>