Web Flow With External Server Posting Back/force-app/main/objects/WebFlowClient__mdt/fields/ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>ClientSecret__c</fullName>
    <label>Client Secret</label>
    <length>200</length>
    <type>Text</type>
</CustomField>