Web Flow With External Server Posting Back/force-app/main/objects/WebFlowClient__mdt/fields/PublicServerRoot__c.field-meta.xml
<CustomField>
    <fullName>PublicServerRoot__c</fullName>
    <label>public web server for offload demo</label>
    <description>If demonstrating offloading of secrets to the public server enter the address here. Example https://my-domain.com/</description>
    <length>80</length>
    <type>Text</type>
</CustomField>