Web Flow With External Server Posting Back/force-app/main/objects/WebFlowClient__mdt/fields/Scopes__c.field-meta.xml
<CustomField>
    <fullName>Scopes__c</fullName>
    <label>Scopes space separated</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>